Melhorias diversas do comando de party